demo/src/main/java/com/example/demo/Util/Error/IDInvalidException.java
package com.example.demo.Util.Error;

public class IDInvalidException extends RuntimeException {
    public IDInvalidException(String message){
        super(message);
    }
}

